# audio-wandas-analyzer

./: .dockerignore  .editorconfig  .gitignore  .venv  .vscodeignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.ja.md  README.md  UX_AUDIT_REPORT.md  node_modules  package-lock.json  package.json  package.nls.ja.json  package.nls.json  playwright.config.ts  pyproject.toml  tsconfig.json
.claude/: settings.json  settings.local.json
.claude/hooks/: waveform-mirror-reminder.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
docs/: architecture.md  developer-guide.ja.md  developer-guide.md  gui-wireframe-spec.md  refactoring-plan.md  security-privacy-report.md  ux-cognitive-audit.md
docs/issue-drafts/: 2026-05-27-file-tree-usability.md  2026-05-27-python-env-ui-clarity.md  2026-05-27-toolbar-main-label-clarification.md
media/: comparisonWaveform.js
python-backend/: analyzer.py  backend_server.py  chart_spec.py  decimator.py  main.py  range_analyzer.py  recipe_runner.py  requirements.txt  test_analyzer.py  test_backend_server.py  test_decimator.py  test_recipe_runner.py  test_wandas_to_chart.py  wandas_to_chart.py  waveform_server.py
scripts/: build-webview.js  check-worktree.sh  clean-dist.js  lint-webview-patterns.js  ux-cognitive-audit.js  verify-gui-triggerability.js  verify.sh  watch-webview.js  worktree-new.sh
src/: extension.ts  waveformServer.ts
(+113 files in other folders)
